salesforce/force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
  <label>Incident</label>
  <pluralLabel>Incidents</pluralLabel>
  <nameField>
    <label>Incident Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>