salesforce/force-app/main/default/objects/Incident__c/fields/ExternalIncidentId__c.field-meta.xml
<CustomField>
  <fullName>ExternalIncidentId__c</fullName>
  <label>External Incident Id</label>
  <type>Text</type>
  <length>80</length>
  <externalId>true</externalId>
  <unique>true</unique>
  <required>true</required>
</CustomField>