salesforce/force-app/main/default/objects/Incident__c/fields/Reason__c.field-meta.xml
<CustomField>
  <fullName>Reason__c</fullName>
  <label>Reason</label>
  <type>LongTextArea</type>
  <length>1000</length>
</CustomField>