salesforce/force-app/main/default/objects/Incident__c/fields/ReportedUser__c.field-meta.xml
<CustomField>
  <fullName>ReportedUser__c</fullName>
  <label>Reported User</label>
  <type>Lookup</type>
  <referenceTo>AppUser__c</referenceTo>
  <relationshipLabel>Incidents</relationshipLabel>
  <relationshipName>IncidentsByReported</relationshipName>
</CustomField>