salesforce/force-app/main/default/objects/Incident__c/fields/Reporter__c.field-meta.xml
<CustomField>
  <fullName>Reporter__c</fullName>
  <label>Reporter</label>
  <type>Lookup</type>
  <referenceTo>AppUser__c</referenceTo>
  <relationshipLabel>Incidents</relationshipLabel>
  <relationshipName>IncidentsByReporter</relationshipName>
</CustomField>