salesforce/force-app/main/default/objects/Incident__c/fields/Ride__c.field-meta.xml
<CustomField>
  <fullName>Ride__c</fullName>
  <label>Ride</label>
  <type>Lookup</type>
  <referenceTo>Ride__c</referenceTo>
  <relationshipLabel>Incidents</relationshipLabel>
  <relationshipName>Incidents</relationshipName>
</CustomField>