salesforce/force-app/main/default/objects/Incident__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>New</fullName><default>true</default><label>New</label></value>
      <value><fullName>InProgress</fullName><default>false</default><label>In Progress</label></value>
      <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
      <value><fullName>Escalated</fullName><default>false</default><label>Escalated</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>