salesforce/force-app/main/default/objects/Incident__c/fields/Type__c.field-meta.xml
<CustomField>
  <fullName>Type__c</fullName>
  <label>Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>SOS</fullName><default>true</default><label>SOS</label></value>
      <value><fullName>Report</fullName><default>false</default><label>Report</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>